--- a/config/west.yml
+++ b/config/west.yml
@@ -3,7 +3,7 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: barbellboards
-      url-base: https://github.com/barbellboards/Rollow-ZMK
+      url-base: https://github.com/barbellboards
   projects:
     - name: zmk
       remote: barbellboards
