fix: trying with zmk main

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,18 +2,28 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+
     # - name: barbellboards
     #   url-base: https://github.com/barbellboards
-    - name: nickconway
-      url-base: https://github.com/nickconway
+
+    # - name: nickconway
+    #   url-base: https://github.com/nickconway
+
   projects:
     - name: zmk
-      remote: nickconway
-      revision: dev
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
+
+#     - name: zmk
+#       remote: nickconway
+#       revision: dev
+#       import: app/west.yml
+
     # - name: Rollow-ZMK
     #   remote: barbellboards
     #   revision: barbellboards/rollow
     #   import: app/west.yml
+
   self:
     path: config
