fix: retrying barbell's fork

--- a/config/west.yml
+++ b/config/west.yml
@@ -3,30 +3,31 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
 
-    - name: osleg
-      url-base: https://github.com/osleg
+#     - name: osleg
+#       url-base: https://github.com/osleg
 
-    # - name: barbellboards
-    #   url-base: https://github.com/barbellboards
+    - name: barbellboards
+      url-base: https://github.com/barbellboards
 
     # - name: nickconway
     #   url-base: https://github.com/nickconway
 
   projects:
-    - name: zmk
-      remote: osleg
-      revision: main
-      import: app/west.yml
+
+#     - name: zmk
+#       remote: osleg
+#       revision: main
+#       import: app/west.yml
 
 #     - name: zmk
 #       remote: nickconway
 #       revision: dev
 #       import: app/west.yml
 
-    # - name: Rollow-ZMK
-    #   remote: barbellboards
-    #   revision: barbellboards/rollow
-    #   import: app/west.yml
+    - name: Rollow-ZMK
+      remote: barbellboards
+      revision: barbellboards/rollow
+      import: app/west.yml
 
   self:
     path: config
