reverting to working state

--- a/config/west.yml
+++ b/config/west.yml
@@ -1,8 +1,10 @@
 manifest:
   remotes:
-
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+
+#     - name: osleg
+#       url-base: https://github.com/osleg
 
 #     - name: barbellboards
 #       url-base: https://github.com/barbellboards
@@ -12,15 +14,20 @@ manifest:
 
   projects:
 
-#     - name: Rollow-ZMK
-#       remote: barbellboards
-#       revision: barbellboards/rollow
+#     - name: zmk
+#       remote: osleg
+#       revision: main
 #       import: app/west.yml
 
     - name: zmk
       remote: nickconway
       revision: dev
       import: app/west.yml
+
+#     - name: Rollow-ZMK
+#       remote: barbellboards
+#       revision: barbellboards/rollow
+#       import: app/west.yml
 
   self:
     path: config
