--- a/config/homerow.dtsi
+++ b/config/homerow.dtsi
@@ -6,7 +6,7 @@
         #binding-cells = <2>;
         tapping-term-ms = <220>;
         quick_tap_ms = <0>;
-        flavor = "tap-preffered";
+        flavor = "tap-preferred";
         bindings = <&kp>, <&kp>;
         };
 
@@ -16,7 +16,7 @@
         #binding-cells = <2>;
         tapping-term-ms = <220>;
         quick_tap_ms = <0>;
-        flavor = "tap-preffered";
+        flavor = "tap-preferred";
         bindings = <&kp>, <&kp>;
         };
 
@@ -26,7 +26,7 @@
         #binding-cells = <2>;
         tapping-term-ms = <170>;
         quick_tap_ms = <0>;
-        flavor = "tap-preffered";
+        flavor = "tap-preferred";
         bindings = <&kp>, <&kp>;
         };
 
@@ -36,7 +36,7 @@
         #binding-cells = <2>;
         tapping-term-ms = <150>;
         quick_tap_ms = <0>;
-        flavor = "tap-preffered";
+        flavor = "tap-preferred";
         bindings = <&kp>, <&kp>;
         };
 
@@ -46,7 +46,7 @@
         #binding-cells = <2>;
         tapping-term-ms = <160>;
         quick_tap_ms = <0>;
-        flavor = "tap-preffered";
+        flavor = "tap-preferred";
         bindings = <&mo>, <&kp>;
         };
     };
