--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -4,31 +4,31 @@
 
         combo_bspc {
             timeout_ms = <50>;
-            key_positions = <17 18>;
+            key-positions = <17 18>;
             bindings = <&kp BSPC>;
         };
 
         combo_sqt {
             timeout_ms = <50>;
-            key_positions = <27 28>;
+            key-positions = <27 28>;
             bindings = <&kp SQT>;
         };
 
         combo_ret {
             timeout_ms = <50>;
-            key_positions = <28 29>;
+            key-positions = <28 29>;
             bindings = <&kp RET>;
         };
 
         combo_esc {
             timeout_ms = <50>;
-            key_positions = <13 14>;
+            key-positions = <13 14>;
             bindings = <&kp ESC>;
         };
 
         combo_cc {
             timeout_ms = <50>;
-            key_positions = <23 24>;
+            key-positions = <23 24>;
             bindings = <&kp LC(C)>;
         };
     };
