--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -3,31 +3,31 @@
         compatible = "zmk,combos";
 
         combo_bspc {
-            timeout_ms = <50>;
+            timeout-ms = <50>;
             key-positions = <17 18>;
             bindings = <&kp BSPC>;
         };
 
         combo_sqt {
-            timeout_ms = <50>;
+            timeout-ms = <50>;
             key-positions = <27 28>;
             bindings = <&kp SQT>;
         };
 
         combo_ret {
-            timeout_ms = <50>;
+            timeout-ms = <50>;
             key-positions = <28 29>;
             bindings = <&kp RET>;
         };
 
         combo_esc {
-            timeout_ms = <50>;
+            timeout-ms = <50>;
             key-positions = <13 14>;
             bindings = <&kp ESC>;
         };
 
         combo_cc {
-            timeout_ms = <50>;
+            timeout-ms = <50>;
             key-positions = <23 24>;
             bindings = <&kp LC(C)>;
         };
