--- a/config/rollow.dtsi
+++ b/config/rollow.dtsi
@@ -9,7 +9,7 @@
 / {
 	chosen {
 		zmk,kscan = &kscan0;
-		zmk,matrix_transform = &my_transform;
+		zmk,matrix_transform = &default_transform;
 	};
 
 	default_transform: keymap_transform_0 {
