--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -4,32 +4,32 @@
 
         combo_bspc {
             timeout-ms = <50>;
-            key-positions = <17 18>;
+            key-positions = <16 17>;
             bindings = <&kp BSPC>;
         };
 
         combo_sqt {
             timeout-ms = <50>;
-            key-positions = <27 28>;
+            key-positions = <26 27>;
             bindings = <&kp SQT>;
         };
 
         combo_ret {
             timeout-ms = <50>;
-            key-positions = <28 29>;
+            key-positions = <27 28>;
             bindings = <&kp RET>;
         };
 
         combo_esc {
             timeout-ms = <50>;
-            key-positions = <13 14>;
+            key-positions = <12 13>;
             bindings = <&kp ESC>;
         };
 
         combo_cc {
             timeout-ms = <50>;
-            key-positions = <23 24>;
-            bindings = <&kp LC(C)>;
+            key-positions = <22 23>;
+            bindings = <&kp MINUS>;
         };
     };
 };
