--- a/config/homerow.dtsi
+++ b/config/homerow.dtsi
@@ -5,8 +5,9 @@
         label = "HOMEROW_MODS";
         #binding-cells = <2>;
         tapping-term-ms = <220>;
-        quick_tap_ms = <0>;
+        quick-tap-ms = <0>;
         flavor = "tap-preferred";
+        global-quick-tap;
         bindings = <&kp>, <&kp>;
         };
 
@@ -15,8 +16,9 @@
         label = "HOMEROW_MODS";
         #binding-cells = <2>;
         tapping-term-ms = <220>;
-        quick_tap_ms = <0>;
+        quick-tap-ms = <0>;
         flavor = "tap-preferred";
+        global-quick-tap;
         bindings = <&kp>, <&kp>;
         };
 
@@ -25,8 +27,9 @@
         label = "HOMEROW_MODS";
         #binding-cells = <2>;
         tapping-term-ms = <170>;
-        quick_tap_ms = <0>;
+        quick-tap-ms = <0>;
         flavor = "tap-preferred";
+        global-quick-tap;
         bindings = <&kp>, <&kp>;
         };
 
@@ -35,8 +38,9 @@
         label = "HOMEROW_MODS";
         #binding-cells = <2>;
         tapping-term-ms = <150>;
-        quick_tap_ms = <0>;
+        quick-tap-ms = <0>;
         flavor = "tap-preferred";
+        global-quick-tap;
         bindings = <&kp>, <&kp>;
         };
 
@@ -45,8 +49,9 @@
         label = "HOMEROW_MODS";
         #binding-cells = <2>;
         tapping-term-ms = <160>;
-        quick_tap_ms = <0>;
+        quick-tap-ms = <0>;
         flavor = "tap-preferred";
+        global-quick-tap;
         bindings = <&mo>, <&kp>;
         };
     };
