--- a/config/homerow.dtsi
+++ b/config/homerow.dtsi
@@ -1,8 +1,8 @@
 / {
     behaviors {
-        hm_asemi: homerow_mods {
+        hm_asemi: homerow_asemi {
         compatible = "zmk,behavior-hold-tap";
-        label = "HOMEROW_MODS";
+        label = "HOMEROW_ASEMI";
         #binding-cells = <2>;
         tapping-term-ms = <220>;
         quick-tap-ms = <0>;
@@ -11,9 +11,9 @@
         bindings = <&kp>, <&kp>;
         };
 
-        hm_sl: homerow_mods {
+        hm_sl: homerow_sl {
         compatible = "zmk,behavior-hold-tap";
-        label = "HOMEROW_MODS";
+        label = "HOMEROW_SL";
         #binding-cells = <2>;
         tapping-term-ms = <220>;
         quick-tap-ms = <0>;
@@ -22,9 +22,9 @@
         bindings = <&kp>, <&kp>;
         };
 
-        hm_dk: homerow_mods {
+        hm_dk: homerow_dk {
         compatible = "zmk,behavior-hold-tap";
-        label = "HOMEROW_MODS";
+        label = "HOMEROW_DK";
         #binding-cells = <2>;
         tapping-term-ms = <170>;
         quick-tap-ms = <0>;
@@ -33,9 +33,9 @@
         bindings = <&kp>, <&kp>;
         };
 
-        hm_fj: homerow_mods {
+        hm_fj: homerow_fj {
         compatible = "zmk,behavior-hold-tap";
-        label = "HOMEROW_MODS";
+        label = "HOMEROW_FJ";
         #binding-cells = <2>;
         tapping-term-ms = <150>;
         quick-tap-ms = <0>;
@@ -44,9 +44,9 @@
         bindings = <&kp>, <&kp>;
         };
 
-        hm_gh: homerow_mods {
+        hm_gh: homerow_gh {
         compatible = "zmk,behavior-hold-tap";
-        label = "HOMEROW_MODS";
+        label = "HOMEROW_GH";
         #binding-cells = <2>;
         tapping-term-ms = <160>;
         quick-tap-ms = <0>;
