fix: me can't sed

--- a/config/unicode.dtsi
+++ b/config/unicode.dtsi
@@ -8,7 +8,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp KP_N9>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -19,7 +19,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp KP_N8>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -30,7 +30,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp A>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -41,7 +41,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp B>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -52,7 +52,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp KP_N2>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -63,7 +63,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp KP_N4>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -74,7 +74,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp E>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -85,7 +85,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp F>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -96,7 +96,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp F &kp KP_N4>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -107,7 +107,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp F &kp KP_N6>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -118,7 +118,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp F &kp KP_N9>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -129,7 +129,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp F &kp B>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -140,7 +140,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp F &kp C>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -151,7 +151,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp E &kp KP_N7>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -162,7 +162,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N0 &kp B &kp KP_N0>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -173,7 +173,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N2 &kp KP_N0 &kp A &kp C>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -184,7 +184,7 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N3 &kp KP_N0 &kp KP_N2>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
 
@@ -195,8 +195,8 @@
             bindings
                 = <&macro_press $kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N3 &kp KP_N0 &kp KP_N8>
-                , <&macro_release ase &kp LALTkp LS(LCTRL)>
+                , <&macro_release &kp LS(LCTRL)>
                 ;
         };
-    };
-};
+    }
+}
