--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -26,7 +26,13 @@
             bindings = <&kp ESC>;
         };
 
-        combo_cc {
+        combo_caps {
+            timeout-ms = <50>;
+            key-positions = <11 13>;
+            bindings = <&cacaps>;
+        };
+
+        combo_min {
             timeout-ms = <50>;
             key-positions = <22 23>;
             bindings = <&kp MINUS>;
