--- a/config/unicode.dtsi
+++ b/config/unicode.dtsi
@@ -193,7 +193,7 @@
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
             bindings
-                = <&macro_press $kp LS(LC(U))>
+                = <&macro_press &kp LS(LC(U))>
                 , <&macro_tap &kp KP_N0 &kp KP_N3 &kp KP_N0 &kp KP_N8>
                 , <&macro_release &kp LSHFT &kp LCTRL>
                 ;
