--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -8,6 +8,12 @@
             bindings = <&kp BSPC>;
         };
 
+        combo_del {
+            timeout-ms = <50>;
+            key-positions = <16 18>;
+            bindings = <&kp DEL>;
+        };
+
         combo_sqt {
             timeout-ms = <50>;
             key-positions = <26 27>;
