--- a/config/tapdances.dtsi
+++ b/config/tapdances.dtsi
@@ -31,5 +31,15 @@
             tapping-term-ms = <200>;
             bindings = <&caps_word>, <&kp CAPS>;
         };
+        caps_ht: caps_ht {
+        compatible = "zmk,behavior-hold-tap";
+        label = "caps_ht";
+        #binding-cells = <2>;
+        tapping-term-ms = <200>;
+        quick-tap-ms = <0>;
+        flavor = "tap-preferred";
+        global-quick-tap;
+        bindings = <&kp>, <&caps_word>;
+        };
     };
 };
