--- a/config/homerow.dtsi
+++ b/config/homerow.dtsi
@@ -54,5 +54,17 @@
         global-quick-tap;
         bindings = <&mo>, <&kp>;
         };
+
+        th_ht: th_ht {
+        compatible = "zmk,behavior-hold-tap";
+        label = "TH_HT";
+        #binding-cells = <2>;
+        tapping-term-ms = <100>;
+        quick-tap-ms = <0>;
+        flavor = "tap-preferred";
+        global-quick-tap;
+        bindings = <&mo>, <&kp>;
+        };
+
     };
 };
